response changes in menuItem